doc/ug: define \program{}

--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -291,6 +291,8 @@
 \newcommand{\new}{$^{New!}$}
 \newcommand{\changed}{$^{Changed!}$}
 
+\newcommand{\program}{\textbf}
+
 %% Colordefinition for table header rows (requires package colortbl)
 \newcommand{\tabheadcol}{\rowcolor[gray]{0.8}}
 
