--- a/doc/src/users-guide/ch-lifecycle.tex
+++ b/doc/src/users-guide/ch-lifecycle.tex
@@ -1,17 +1,121 @@
-\ifdraft
-
 \chapter{Modeling Node Failures}
 \label{cha:lifecycle}
 
-TODO:
+\section{Overview}
 
-lifecycle modeling
+Simulation is often used to study the effects of unexpected events like 
+a router crash on the network. In order to accommodate such scenarios, INET
+supports \textit{lifecycle modeling} of network nodes. The up/down 
+status of a node is changed via lifecycle operations.
 
-NodeStatus
+INET supports the following lifecycle operations:
 
-mention scripting
+\begin{itemize}
+  \item \textit{Startup} represents the process of booting up or starting
+    a network node after a shutdown or crash operation.
+  \item \textit{Shutdown} represents the process of orderly shutting down 
+    a network node.
+  \item \textit{Crash} represents the process of crashing a network node. 
+    The difference between \textit{crash} and \textit{shutdown} is that
+    for a crash, the network node will not do a graceful shutdown (e.g. 
+    routing protocols will not have a chance of notifying peers about 
+    broken routes).
+\end{itemize}
 
-\fi
+In a real-life router or other network node, a crash or shutdown and 
+subsequent restart affects all parts of the system. All non-persistent
+information is lost. Protocol states are reset, various tables are cleared, 
+connections are broken or torn down, applications restart, and so on. 
+
+Mimicking this behavior in simulation does not come for free, it 
+needs to be explicitly programmed into each affected component.
+Here are some examples how INET components react to a \textit{crash}
+lifecycle event:
+
+\begin{itemize}
+  \item \nedtype{Tcp} forgets all open connections and sockets 
+  \item \nedtype{Ipv4} clears the fragmentation reassembly buffers and pending packets
+  \item \nedtype{Ipv4RoutingTable} clears the route table
+  \item \nedtype{EtherMac} and other MAC protocols clear their queues and reset their state 
+    associated with the current transmission(s)  %TODO or at least they are supposed to do that
+  \item \nedtype{Ospf} clears its full state
+  \item \nedtype{UdpBasicApp}, \nedtype{TcpSessionApp} and other applications 
+    reset their state and stop/restart their timers
+  \item \nedtype{EtherSwitch}, \nedtype{AccessPoint}, and other L2 bridging 
+    devices clear their MAC address tables
+\end{itemize}
+
+While down, network interfaces, and components in general, ignore (discard)
+messages sent to them.
+
+Lifecycle operations are currently instanteneous, i.e. they complete in 
+zero simulation time. The underlying framework would allow for modeling 
+them as processes that take place in some finite (nonzero) simulation time, 
+but this possibility is currently not in use.
+
+It also is possible to simulate a crash or shutdown of part of a node 
+(certain protocols or interfaces only). Such scenarios would correspond
+to e.g. the crash of an OSPF daemon on a real OS.
+
+In the following sections we outline the INET components that
+participate in lifecycle modeling, and show a usage example.
+
+\section{NodeStatus}
+
+Node models contain a \nedtype{NodeStatus} module that keeps track of 
+the status of the node (up, down, etc.) for other modules, and also 
+displays it the GUI as a small overlay icon.
+
+The \nedtype{NodeStatus} module is declared conditionally (so that it is
+only created in simulations that need it), like this:
+
+\begin{ned}
+status: NodeStatus if hasStatus;
+\end{ned}
+
+If lifecycle modeling is required, the following line can be added to the ini
+file to ensure that nodes have status modules:
+
+\begin{inifile}
+**.hasStatus = true
+\end{inifile}
+
+\section{Scripting}
+
+Lifecycle operations can be triggered from code (e.g. the node shuts down
+when its battery depletes), or from scripts.
+
+INET supports scripting via the \nedtype{ScenarioManager} NED type, 
+described in chapter \ref{cha:scenario-management}.
+Here is an example script that shuts down a router at simulation
+time 2s, and starts it up a again at time 8s:
+
+\begin{XML}
+<scenario>
+  <initiate t="2s" module="Router2" operation="shutdown"/> 
+  <initiate t="8s" module="Router2" operation="startup"/> 
+</scenario>
+\end{XML}
+
+The \ttt{module} attribute should point to the module (host, router,
+network interface, protocol, etc.) to be operated on. 
+The \ttt{operation} attribute should contain the operation to perform:
+\ttt{"shutdown"}, \ttt{"crash"}, or \ttt{"startup"}.
+\ttt{t} is the simulation time the operation should be initiated at.
+
+An alternative, shorter form is to use \ttt{<shutdown>} / 
+\ttt{<crash>} / \ttt{<startup>} elements instead of the
+\ttt{operation} attribute:
+
+\begin{XML}
+<scenario>
+  <shutdown t="2s" module="Router2"/> 
+  <startup  t="8s" module="Router2"/> 
+</scenario>
+\end{XML}
+
+
+
 
 %%% Local Variables:
 %%% mode: latex
