--- a/doc/src/developers-guide/ch-introduction.tex
+++ b/doc/src/developers-guide/ch-introduction.tex
@@ -1,30 +1,34 @@
 \chapter{Introduction}
 \label{cha:introduction}
 
-
 \section{What is INET Framework}
 
-INET Framework contains IPv4, IPv6, TCP, SCTP, UDP protocol implementations,
-and several application models. The framework also includes an MPLS model
-with RSVP-TE and LDP signalling. Link-layer models are PPP, Ethernet and 802.11.
-Static routing can be set up using network autoconfigurators, or one can use
-routing protocol implementations. The INET Framework supports wireless and
-mobile simulations as well.
+INET Framework is an open-source model library for the OMNeT++ simulation
+environment. It provides protocols, agents and other models for researchers and
+students working with communication networks. INET is especially useful when
+designing and validating new protocols, or exploring new or exotic scenarios.
 
+INET supports a wide class of communication networks, including wired, wireless,
+mobile, ad hoc and sensor networks.  It contains models for the Internet stack
+(TCP, UDP, IPv4, IPv6, OSPF, BGP, etc.), link layer protocols (Ethernet, PPP,
+IEEE 802.11, various sensor MAC protocols, etc), refined support for the
+wireless physical layer, MANET routing protocols, DiffServ, MPLS with LDP and
+RSVP-TE signalling, several application models, and many other protocols and
+components. It also provides support for node mobility, advanced visualization,
+network emulation and more.
+
+Several other simulation frameworks take INET as a base, and extend it into
+specific directions, such as vehicular networks, overlay/peer-to-peer networks,
+or LTE.
 
 \section{Scope of this Manual}
 
 This manual is written for developers who intend to extend INET with new
 components, written in C++. This manual is accompanied by the INET Reference,
-which is generated from NED and MSG files using OMNeT++'s documentation generator, 
-and the documentation of the underlying C++ classes, generated from the source files 
-using Doxygen. A working knowledge of OMNeT++ and the C++ language is assumed.
-
-\ifdraft TODO
-\section{Contents of this Manual}
-
-todo...
-\fi
+which is generated from NED and MSG files using OMNeT++'s documentation
+generator, and the documentation of the underlying C++ classes, generated from
+the source files using Doxygen. A working knowledge of OMNeT++ and the C++
+language is assumed.
 
 
 %%% Local Variables:
