--- a/doc/src/users-guide/ch-environment.tex
+++ b/doc/src/users-guide/ch-environment.tex
@@ -15,88 +15,67 @@ The propagation of radio signals, the movement of communicating agents,
 battery exhaustion, etc., depend on the surrounding physical environment.
 For example, signals can be absorbed by objects, can pass through objects,
 can be refracted by surfaces, can be reflected from surfaces, or battery
-nominal capacity might depend on external temperature. These effects cannot
+capacity might depend on external temperature. These effects cannot
 be ignored in high-fidelity simulations.
 
-In order to help the modeling process, the model of the physical
-environment is separated from the rest of the simulation models. The main
+In order to help the modeling process, the model of the physical environment in
+the INET Framework is separated from the rest of the simulation model. The main
 goal of the physical environment model is to describe buildings, walls,
-vegetation, terrain, weather, and other physical objects and conditions
-that might have effects on radio signal propagation, movement, batteries,
-etc. This separation makes the model reusable by all other simulation
-models that depend on these circumstances.
+vegetation, terrain, weather, and other physical objects and conditions that
+might have effects on radio signal propagation, movement, batteries, etc. This
+separation makes the model reusable by all other simulation models that depend
+on these circumstances.
 
 The following sections provide a brief overview of the physical environment
 model.
 
-\section{The Physical Environment Model}
+\section{PhysicalEnvironment}
 
-The physical environment is represented in an INET simulation by a
-\nedtype{PhysicalEnvironment} module. This module normally has one instance
-in the network, and acts as a database that other parts of the simulation
-can query at runtime.
-
-\section{Global Physical Properties}
-
-The physical environment model stores the following global
-properties:
+In INET, the physical environment is modeled by the
+\nedtype{PhysicalEnvironment} compound module. This module normally has one
+instance in the network, and acts as a database that other parts of the
+simulation can query at runtime. It contains the following information:
 
 \begin{itemize}
-  \item \textit{space limits}: global bounds for the 3-dimensional space
-  \item \textit{temperature}: global parameter for temperature-dependent models
+  \item geometry and properties of \textit{physical objects} (usually referrred to as ``obstacles'' in wireless simulations)
+  \item a \textit{ground model}
+  \item other physical properties of the environment, like its bounds in space
 \end{itemize}
 
-Space limits are useful for limiting the propagation and reflection of
-radio signals, to constrain movement of communicating agents, and for
-detecting incorrectly positioned physical objects.
+\nedtype{PhysicalEnvironment} is an active compound module, that is, it has an
+associated C++ class that contains the data structures and implements an API 
+that allows other modules to query the data.
 
-Temperature can be useful for modeling batteries, as it affects the
-maximum capacity, internal resistance, self-discharge and other properties
-of real-life electrochemical energy storage devices.
+Part of \nedtype{PhysicalEnvironment}'s functionality is implemented in
+submodules for easy replacement. They are currently the ground model,
+and an object cache (for efficient queries):
+
+\begin{ned}
+ground: <groundType> like IGround if groundType != "";
+objectCache: <objectCacheType> like IObjectCache if objectCacheType != "";
+\end{ned}
 
 \section{Physical Objects}
 
-The most important aspect of the physical environment is the objects which
-are present in it. For example, simulating an indoor Wifi scenario may need
-to model walls, floors, ceilings, doors, windows, furniture, and similar
-objects, because they all affect signal propagation.
+The most important aspect of the physical environment is the objects which are
+present in it. For example, simulating an indoor Wifi scenario may need to model
+walls, floors, ceilings, doors, windows, furniture, and similar objects, because
+they all affect signal propagation (obstacle modeling). 
 
-Objects are located in space, and have shapes and materials. The INET
-physical layer infrastructure supports basic shapes and homogeneous
-materials, which simplifies description and still allows for a reasonable
-approximation of reality. Physical objects in INET have the following
-properties:
-
-\begin{itemize}
-  \item \textit{shape}: describes the 3-dimensional shape of the object,
-    independent of its position and orientation
-  \item \textit{position}: determines where the object is located in the 3-dimensional space
-  \item \textit{orientation}: determines how the object is rotated relative to its
-    default orientation
-  \item \textit{material}: describes material-specific physical properties
-  \item \textit{graphical properties}: provides parameters for better visualization
-\end{itemize}
-
-Physical objects in INET are stationary, they cannot change their position
-or orientation over time.
-
-Since the shape of the physical objects might be quite diverse, the model
-is designed to be extensible with new shapes. Concave shapes are not yet
-supported, such shapes can be represented by splitting them up into smaller,
-convex parts. The current implementation provides the following shapes:
+Objects are located in space, and have shapes and materials. The physical
+environment model supports basic shapes and homogeneous materials, which is a
+simplified description but still allows for a reasonable approximation of
+reality. Physical objects in INET have the following properties:
 
 \begin{itemize}
-  \item \textit{sphere}: specified by a radius
-  \item \textit{cuboid}: specified by a length, a width, and a height
-  \item \textit{prism}: specified by a 2-dimensional polygon base and a height
-  \item \textit{polyhedron}: specified by the convex hull of a set of
-    3-dimensional vertices
+    \item \emph{shape} describes the object in 3D independent of its position and orientation.
+    \item \emph{position} determines where the object is located in the 3D space.
+    \item \emph{orientation} determines how the object is rotated relative to its default orientation.
+    \item \emph{material} describes material specific physical properties.
+    \item \emph{graphical properties} provide parameters for better visualization.
 \end{itemize}
 
-\section{Visualization}
-
-The \nedtype{PhysicalEnvironment} module is capable is visualizing the objects on the
-user interface. Rendering makes use of the following graphical object properties:
+Graphical properties include:
 
 \begin{itemize}
   \item \textit{line width}: affects surface outline
@@ -106,74 +85,109 @@ user interface. Rendering makes use of the following graphical object properties
   \item \textit{tags}: allows filtering objects on the graphical user interface
 \end{itemize}
 
-The projection of 3D objects to the 2D canvas can be parameterized with an
-arbitrary view angle. The default view angle is the Z axis (i.e. top view).
-The view angle can also be changed during runtime, by changing the
-appropriate module parameter.
-
-The projection mechanism can be accessed by other models (e.g. mobility
-models) for their own visualizations.
-
-\section{Specifying Physical Objects}
-
-Physical objects are defined for the \nedtype{PhysicalEnvironment} module
-in an XML document. The document format allows one to define physical objects
-together with their properties, and one can also define shapes and materials
-that are shared (i.e. referenced) by several objects.
-
-The following example shows some shapes, materials and objects defined in XML:
-
-\begin{verbatim}
-<environment>
-  <!-- shapes and materials -->
-  <shape id="1" type="sphere" radius="10"/>
-  <shape id="2" type="cuboid" size="20 30 40"/>
-  <shape id="3" type="prism" height="100"
-         points="0 0 100 0 100 100 0 100"/>
-  <shape id="4" type="polyhedron"
-         points="0 0 0 100 0 0 100 100 0 0 100 0 ..."/>
-  <material id="1" resistivity="100"
-         relativePermittivity="4.5" relativePermeability="1"/>
-
-  <!-- an object that uses a previously defined shape and material -->
-  <object position="min 100 200 0" orientation="45 -30 0"
-          shape="1" material="1"
-          line-color="0 0 0" fill-color="112 128 144" opacity="0.5"/>
-
-  <!-- an object defined with an in-line shape -->
-  <object position="min 100 200 0" orientation="45 -30 0"
-          shape="cuboid 20 30 40" material="concrete"
-          line-color="0 0 0" fill-color="112 128 144" tags="Building"/>
-</environment>
-\end{verbatim}
-
-For more details, please refer to the documentation of the
-\nedtype{PhysicalEnvironment} module.
-
-\section{Data Structure}
-
-In order to model the physical environment in detail, a scenario might contain
-several thousands or even more physical objects. Simulation models might
-need to query these objects quite often. For example, when the physical layer
-computes obstacle loss for a transmission, it needs to find the obstructing
-physical objects for each receiver. This requires computing the intersection
-between physical objects and the path traveled by the radio signal.
-
-To speed up the computation of intersections, INET stores physical objects
-in a highly efficient data structure, which currently can be one of the
-following:
+Physical objects in INET are stationary, they cannot change their position
+or orientation over time. Since the shape of the physical objects might be
+quite diverse, the model is designed to be extensible with new shapes.
+INET provides the following shapes:
 
 \begin{itemize}
-  \item \nedtype{GridObjectCache}: organizes objects into a 3D spatial grid with
-    a configurable constant cell size, where cells contain the objects that
-    intersect with them
-  \item \nedtype{BvhObjectCache}: organizes objects into a 3D tree, where
-    leaves contain a configurable number of closely positioned objects.
-    (This data structure is similar to quadtree and octree, but is designed for
-    storing finite-sized objects.)
+    \item \emph{sphere} shapes are specified by a radius
+    \item \emph{cuboid} shapes are specified by a length, a width, and a height
+    \item \emph{prism} shapes are specified by a 2D polygon base and a height
+    \item \emph{polyhedron} shapes are specified by the convex hull of a set of 3D vertices
 \end{itemize}
 
-The physical environment model uses \nedtype{GridObjectCache} by default.
+The following example shows how to define various physical objects using
+the XML syntax supported by the physical environment:
+
+\xmlsnippet{DefiningPhysicalObjectsExample}{Defining physical objects example}
+
+In order to load the above XML file, the following configuration could be
+used:
+
+\inisnippet{PhysicalObjectsConfigurationExample}{Physical objects configuration example}
+
+\section{Ground Models}
+
+% Why ground models are needed?
+In inter-vehicle simulations the terrain has profound effects on signal
+propagation. For example, vehicles on the opposite sides of a mountain
+cannot directly communicate with each other.
+
+% What is the purpose of ground models?
+A ground model describes the 3D surface of the terrain. Its main purpose is
+to compute a position on the surface underneath an particular position.
+
+% What ground models are available?
+INET contains the following built-in ground models implemented as
+OMNeT++ simple modules:
+
+\begin{itemize}
+    \item \nedtype{FlatGround} is a trivial model which provides a flat surface parallel to the XY plane at a certain height.
+    \item \nedtype{OsgEarthGround} is a more realistic model (based on \program{osgEarth}) which provides a terrain surface.
+\end{itemize}
+
+\section{Geographic Coordinate System Models}
+
+% Why geographic coordinate systems are needed?
+In order to run high fidelity simulations, it is often required to embed
+the communication network into a real world map. With the new OMNeT++ 5
+version, INET already provides support for 3D maps using
+\program{osgEarth} for visualization and \program{openstreetmap} as the map
+provider.
+
+However, INET carries out all geometric computation internally (including
+signal propagation and path loss) in a 3D Euclidean coordinate system. The
+discrepancy between the internal playground coordinate system and the usual
+geographic coordinate systems must be resolved.
+
+% What is the purpose of geographic coordinate system models?
+A geographic coordinate system model maps playground coordinates to
+geographic coordinates, and vice versa. Such a model allows positioning
+physical objects and describing network node mobility using geographical
+coordinates (e.g longitude, latitude, altitude).
+
+% What geographic coordinate system models are provided?
+In INET, a geographic coordinate system model is implemented as an OMNeT++
+simple module:
+
+\begin{itemize}
+    \item \nedtype{SimpleGeographicCoordinateSystem} provides a trivial linear approximation without any external dependency.
+    \item \nedtype{OsgGeographicCoordinateSystem} provides an accurate mapping using the external \program{osgEarth} library.
+\end{itemize}
+
+% How geographic coordinate system modules are used?
+In order to use geographic coordinates in a simulation, a geographic
+coordinate system module must be included in the network. The desired
+physical environment module and mobility modules must be configured (using
+module path parameters) to use the geographic coordinate system module. The
+following example also shows how the geographic coordinate system module
+can be configured to place the playground at a particular geographic
+location and orientation.
+
+\inisnippet{GeographicCoordinateSystemConfigurationExample}{Geographic coordinate system configuration example}
+
+\section{Object Cache}
+
+If a simulation contains a large number of physical objects, then signal
+propagation may become computationally very expensive. The reason is that
+the transmission medium model must check each line of sight path between
+all transmitter and receiver pairs against all physical objects.
+
+An object cache organizes physical objects into a data structure which provides
+efficient geometric queries. Its main purpose is to iterate all physical objects
+penetrated by a 3D line segment.
+
+In INET, an object cache model is implemented as an OMNeT++ simple module:
+
+\begin{itemize}
+    \item \nedtype{GridObjectCache} organizes objects into a fixed cell size 3D spatial grid.
+    \item \nedtype{BvhObjectCache} organizes objects into a tree data structure based on recursive 3D volume division.
+\end{itemize}
+
+
+
+
 
 %%% Local Variables:
 %%% mode: latex
