--- a/doc/src/users-guide/ch-other-network-protocols.tex
+++ b/doc/src/users-guide/ch-other-network-protocols.tex
@@ -1,3 +1,5 @@
+\ifdraft
+
 \chapter{Other Network Protocols}
 \label{cha:other-network-protocols}
 
@@ -10,6 +12,8 @@ Flood, ProbabilisticBroadcast, WiseRoute
 InternetCloud
 
 GNP
+
+\fi
 
 %%% Local Variables:
 %%% mode: latex
