doc/ug: ch-scripting, ch-lifecycle

--- a/doc/src/users-guide/ch-mpls.tex
+++ b/doc/src/users-guide/ch-mpls.tex
@@ -185,7 +185,7 @@ config file. An example \ttt{traffic.xml} file:
 In the route, \ttt{<node>} stands for strict hop, and \ttt{<lnode>} for loose hop.
 
 Paths can also be set up and torn down dynamically with \nedtype{ScenarioManager} 
-commands (see chapter \ref{cha:scenario-management}). 
+commands (see chapter \ref{cha:scenario-scripting}). 
 \nedtype{RsvpTe} understands the \ttt{<add-session>} and \ttt{<del-session>}
 \nedtype{ScenarioManager} commands. The contents of the \ttt{<add-session>}
 element can be the same as the \ttt{<session>} element for the \ttt{traffic.xml}
