--- a/doc/src/users-guide/ch-scenario-scripting.tex
+++ b/doc/src/users-guide/ch-scenario-scripting.tex
@@ -1,12 +1,12 @@
-\chapter{Scenario Management (or maybe: Scripting or Scenario Scripting)}
-\label{cha:scenario-management}
+\chapter{Scenario Scripting}
+\label{cha:scenario-scripting}
 
 \section{Overview}
 
 The INET Framework contains scripting support to help the user express 
 scenarios that cannot be adequately described using static configuration.
-You can schedule certain events to take place at specified times,
-like changing a parameter value, changing the bit error rate of
+You can schedule actions to be carried out at specified simulation times,
+for example changing a parameter value, changing the bit error rate of
 a connection, removing or adding connections, removing or adding 
 routes in a routing table, shutting down or crashing routers, etc. 
 The aim is usually to observe transient behaviour caused by the changes.
@@ -16,7 +16,7 @@ INET supports the following built-in actions:
 \begin{itemize}
   \item Create or delete module
   \item Create or delete connection
-  \item Set module module or channel parameter
+  \item Set module or channel parameter
   \item Initiate lifecycle operation (startup, shutdown, crash) 
     on a network node or part of it
 \end{itemize}
